--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    <link rel="stylesheet" href="./css/styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Talento Lab Proyect EX</title>
 </head>
 <body>
-    <header style="border: 2px solid blue; color:blue">
+    <header>
     <h1 id="Inicio"><img src="./imagenes/Logo.png" alt="Logo de Talento Lab" width="35" height="35"><strong>Primer proyecto en HTML</strong></h1>
     </header>
     <nav style="border: 2px solid black; color: lightblue">
@@ -65,7 +66,7 @@
             </audio>
         </aside>
     </main>
-    <footer style="text-align: center;">
+    <footer>
         <p> Todos los derechos fueron reservados por <em><strong>Sergio Zen</strong></em>.</p>
         <a href="mailto:sergioeezzz@gmail.com.ar">Enviar correo</a>
     </footer>
